// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MetadataTable should correctly render different types of metadata 1`] = `
<styled.tr
  data-test="metadata-table-row"
>
  <styled.td>
    <KeySelect
      defaultValue="tx_id"
      name="key"
      onChange={[MockFunction]}
      onUpdate={[MockFunction]}
      usedKeys={[]}
    />
  </styled.td>
  <styled.td>
    <Styled(withChangeHandler(undefined))
      id="metadata-alias-column"
      name="alias"
      onBlur={[MockFunction]}
      onChange={[MockFunction]}
      value="test_alias"
    />
  </styled.td>
  <styled.td>
    <Select
      name="type"
      onChange={[MockFunction]}
      onUpdate={[MockFunction]}
      options={
        [
          {
            "label": "Text",
            "value": "Text",
          },
          {
            "label": "Text (Optional)",
            "value": "Text_Optional",
          },
          {
            "label": "Date",
            "value": "Date",
          },
          {
            "label": "Language",
            "value": "Language",
          },
          {
            "label": "Region",
            "value": "Region",
          },
        ]
      }
      value="Text"
    />
  </styled.td>
  <styled.td>
    <Styled(withChangeHandler(undefined))
      id="metadata-value-column"
      name="textValue"
      onBlur={[MockFunction]}
      onChange={[MockFunction]}
      value="text"
    />
  </styled.td>
  <styled.td>
    <FallbackSelect
      name="fallbackKey"
      onChange={[MockFunction]}
      onUpdate={[MockFunction]}
      options={[]}
    />
  </styled.td>
  <styled.td>
    <Styled(DeleteButton)
      data-test="metadata-delete-row"
      onClick={[Function]}
      size="medium"
    />
  </styled.td>
</styled.tr>
`;

exports[`MetadataTable should correctly render different types of metadata 2`] = `
<styled.tr
  data-test="metadata-table-row"
>
  <styled.td>
    <KeySelect
      defaultValue="iat"
      name="key"
      onChange={[MockFunction]}
      onUpdate={[MockFunction]}
      usedKeys={[]}
    />
  </styled.td>
  <styled.td>
    <Styled(withChangeHandler(undefined))
      id="metadata-alias-column"
      name="alias"
      onBlur={[MockFunction]}
      onChange={[MockFunction]}
      value="date_alias"
    />
  </styled.td>
  <styled.td>
    <Select
      name="type"
      onChange={[MockFunction]}
      onUpdate={[MockFunction]}
      options={
        [
          {
            "label": "Text",
            "value": "Text",
          },
          {
            "label": "Text (Optional)",
            "value": "Text_Optional",
          },
          {
            "label": "Date",
            "value": "Date",
          },
          {
            "label": "Language",
            "value": "Language",
          },
          {
            "label": "Region",
            "value": "Region",
          },
        ]
      }
      value="Date"
    />
  </styled.td>
  <styled.td>
    <Styled(Styled(withChangeHandler(undefined)))
      name="dateValue"
      onBlur={[MockFunction]}
      onChange={[MockFunction]}
      type="date"
      value="2018-09-17"
    />
  </styled.td>
  <styled.td>
    <FallbackSelect
      name="fallbackKey"
      onChange={[MockFunction]}
      onUpdate={[MockFunction]}
      options={[]}
    />
  </styled.td>
  <styled.td>
    <Styled(DeleteButton)
      data-test="metadata-delete-row"
      onClick={[Function]}
      size="medium"
    />
  </styled.td>
</styled.tr>
`;

exports[`MetadataTable should correctly render different types of metadata 3`] = `
<styled.tr
  data-test="metadata-table-row"
>
  <styled.td>
    <KeySelect
      defaultValue="iat"
      name="key"
      onChange={[MockFunction]}
      onUpdate={[MockFunction]}
      usedKeys={[]}
    />
  </styled.td>
  <styled.td>
    <Styled(withChangeHandler(undefined))
      id="metadata-alias-column"
      name="alias"
      onBlur={[MockFunction]}
      onChange={[MockFunction]}
      value="region_alias"
    />
  </styled.td>
  <styled.td>
    <Select
      name="type"
      onChange={[MockFunction]}
      onUpdate={[MockFunction]}
      options={
        [
          {
            "label": "Text",
            "value": "Text",
          },
          {
            "label": "Text (Optional)",
            "value": "Text_Optional",
          },
          {
            "label": "Date",
            "value": "Date",
          },
          {
            "label": "Language",
            "value": "Language",
          },
          {
            "label": "Region",
            "value": "Region",
          },
        ]
      }
      value="Region"
    />
  </styled.td>
  <styled.td>
    <Select
      name="regionValue"
      onChange={[MockFunction]}
      onUpdate={[MockFunction]}
      options={
        [
          {
            "label": "GB_ENG",
            "value": "GB_ENG",
          },
          {
            "label": "GB_GBN",
            "value": "GB_GBN",
          },
          {
            "label": "GB_NIR",
            "value": "GB_NIR",
          },
          {
            "label": "GB_SCT",
            "value": "GB_SCT",
          },
          {
            "label": "GB_WLS",
            "value": "GB_WLS",
          },
        ]
      }
      value="GB_ENG"
    />
  </styled.td>
  <styled.td>
    <FallbackSelect
      name="fallbackKey"
      onChange={[MockFunction]}
      onUpdate={[MockFunction]}
      options={[]}
    />
  </styled.td>
  <styled.td>
    <Styled(DeleteButton)
      data-test="metadata-delete-row"
      onClick={[Function]}
      size="medium"
    />
  </styled.td>
</styled.tr>
`;

exports[`MetadataTable should correctly render different types of metadata 4`] = `
<styled.tr
  data-test="metadata-table-row"
>
  <styled.td>
    <KeySelect
      defaultValue="iat"
      name="key"
      onChange={[MockFunction]}
      onUpdate={[MockFunction]}
      usedKeys={[]}
    />
  </styled.td>
  <styled.td>
    <Styled(withChangeHandler(undefined))
      id="metadata-alias-column"
      name="alias"
      onBlur={[MockFunction]}
      onChange={[MockFunction]}
      value="language_alias"
    />
  </styled.td>
  <styled.td>
    <Select
      name="type"
      onChange={[MockFunction]}
      onUpdate={[MockFunction]}
      options={
        [
          {
            "label": "Text",
            "value": "Text",
          },
          {
            "label": "Text (Optional)",
            "value": "Text_Optional",
          },
          {
            "label": "Date",
            "value": "Date",
          },
          {
            "label": "Language",
            "value": "Language",
          },
          {
            "label": "Region",
            "value": "Region",
          },
        ]
      }
      value="Language"
    />
  </styled.td>
  <styled.td>
    <Select
      name="languageValue"
      onChange={[MockFunction]}
      onUpdate={[MockFunction]}
      options={
        [
          {
            "label": "en",
            "value": "en",
          },
          {
            "label": "cy",
            "value": "cy",
          },
        ]
      }
      value="cy"
    />
  </styled.td>
  <styled.td>
    <FallbackSelect
      name="fallbackKey"
      onChange={[MockFunction]}
      onUpdate={[MockFunction]}
      options={[]}
    />
  </styled.td>
  <styled.td>
    <Styled(DeleteButton)
      data-test="metadata-delete-row"
      onClick={[Function]}
      size="medium"
    />
  </styled.td>
</styled.tr>
`;

exports[`MetadataTable should render 1`] = `
<styled.tr
  data-test="metadata-table-row"
>
  <styled.td>
    <KeySelect
      defaultValue="tx_id"
      name="key"
      onChange={[MockFunction]}
      onUpdate={[MockFunction]}
      usedKeys={[]}
    />
  </styled.td>
  <styled.td>
    <Styled(withChangeHandler(undefined))
      id="metadata-alias-column"
      name="alias"
      onBlur={[MockFunction]}
      onChange={[MockFunction]}
      value="test_alias"
    />
  </styled.td>
  <styled.td>
    <Select
      name="type"
      onChange={[MockFunction]}
      onUpdate={[MockFunction]}
      options={
        [
          {
            "label": "Text",
            "value": "Text",
          },
          {
            "label": "Text (Optional)",
            "value": "Text_Optional",
          },
          {
            "label": "Date",
            "value": "Date",
          },
          {
            "label": "Language",
            "value": "Language",
          },
          {
            "label": "Region",
            "value": "Region",
          },
        ]
      }
      value="Text"
    />
  </styled.td>
  <styled.td>
    <Styled(withChangeHandler(undefined))
      id="metadata-value-column"
      name="textValue"
      onBlur={[MockFunction]}
      onChange={[MockFunction]}
      value="text"
    />
  </styled.td>
  <styled.td>
    <FallbackSelect
      name="fallbackKey"
      onChange={[MockFunction]}
      onUpdate={[MockFunction]}
      options={[]}
    />
  </styled.td>
  <styled.td>
    <Styled(DeleteButton)
      data-test="metadata-delete-row"
      onClick={[Function]}
      size="medium"
    />
  </styled.td>
</styled.tr>
`;
